--- a/expressJS/public/css/main.css
+++ b/expressJS/public/css/main.css
@@ -1,106 +1,108 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font: sans-serif
+  padding: 0;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
-    padding: 1rem;
+  padding: 1rem;
+  margin: auto;
 }
 
 .main-header {
-    width: 100%;
-    height: 3.5rem;
-    background-color: #dbc441;
-    padding: 0 1.5rem;
+  width: 100%;
+  height: 3.5rem;
+  background-color: #00695c;
+  padding: 0 1.5rem;
 }
 
-.main-header_nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
+.main-header__nav {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.main-header_item-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.main-header__item-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-.main-header_item {
-    margin: 0 1rem;
-    padding: 0;
+.main-header__item {
+  margin: 0 1rem;
+  padding: 0;
 }
 
-.main-header_item a {
-    text-decoration: none;
-    color: black;
+.main-header__item a {
+  text-decoration: none;
+  color: white;
 }
 
-.main-header_item a:hover,
-.main-header_item a.active,
-.main-header_item a:active {
-    color: #3e00a1;
+.main-header__item a:hover,
+.main-header__item a:active,
+.main-header__item a.active {
+  color: #ffeb3b;
 }
 
 .grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: stretch;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
 }
 
 .card {
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
-.card_header,
-.card_content {
-    padding: 1rem;
+.card__header,
+.card__content {
+  padding: 1rem;
 }
 
-.card_header h1,
-.card_content h1,
-.card_content h2,
-.card_content p {
-    margin: 0;
+.card__header h1,
+.card__content h1,
+.card__content h2,
+.card__content p {
+  margin: 0;
 }
 
-.card_image {
-    width: 100%;
+.card__image {
+  width: 100%;
 }
 
-.card_image img {
-    width: 100%;
+.card__image img {
+  width: 100%;
 }
 
-.card_actions {
+.card__actions {
     padding: 1rem;
     text-align: center;
 }
 
-.card_actions button,
-.card_actions a {
+.card__actions button,
+.card__actions a {
     margin: 0 0.25rem;
 }
 
 .btn {
-    font: inherit;
-    border: 1px solid #00695c;
-    color: #00695c;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
+  font: inherit;
+  border: 1px solid #00695c;
+  color: #00695c;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .btn:hover,
 .btn:active {
-    background-color: #00695c;
-    color: white;
+  background-color: #00695c;
+  color: white;
 }
